--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -54,6 +54,7 @@ dist.jar=${dist.dir}/FeeManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.kotlin-runtime.jar=nulllib\\kotlin-runtime.jar
 file.reference.kotlin-runtime.jar-1=lib/kotlin-runtime.jar
 file.reference.mysql-connector-java-5.1.4.jar=lib\\mysql-connector-java-5.1.4.jar
 file.reference.mysql-connector-java-5.1.47-bin.jar=lib\\mysql-connector-java-5.1.47-bin.jar
@@ -94,7 +95,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-kotlinc.classpath=
+kotlinc.classpath=${file.reference.kotlin-runtime.jar}
 main.class=feemanagement.FeeManagement
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
