--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -54,7 +54,11 @@ dist.jar=${dist.dir}/FeeManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.kotlin-runtime.jar=nulllib\\kotlin-runtime.jar
+file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
+file.reference.jgoodies-common-1.2.0.jar=lib/jgoodies-common-1.2.0.jar
+file.reference.jgoodies-looks-2.4.1.jar=lib/jgoodies-looks-2.4.1.jar
+file.reference.junit-4.6.jar=lib/junit-4.6.jar
+file.reference.kotlin-runtime.jar=C:\\Users\\aarav\\AppData\\Roaming\\NetBeans\\8.2\\kotlinc\\lib\\kotlin-runtime.jar
 file.reference.kotlin-runtime.jar-1=lib/kotlin-runtime.jar
 file.reference.mysql-connector-java-5.1.4.jar=lib\\mysql-connector-java-5.1.4.jar
 file.reference.mysql-connector-java-5.1.47-bin.jar=lib\\mysql-connector-java-5.1.47-bin.jar
@@ -64,8 +68,11 @@ file.reference.ojdbc7_g.jar=lib/ojdbc7_g.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JClander.classpath}:\
     ${file.reference.ojdbc7.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jgoodies-common-1.2.0.jar}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar}:\
+    ${file.reference.junit-4.6.jar}:\
     ${file.reference.ojdbc7_g.jar}:\
     ${file.reference.mysql-connector-java-5.1.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
@@ -81,7 +88,7 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${kotlinc.classpath}:
+    ${kotlinc.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -104,7 +111,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${kotlinc.classpath}:
+    ${kotlinc.classpath}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
