--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,16 +1,11 @@
 #
-<<<<<<< HEAD
-#Sat Dec 29 11:49:26 IST 2018
-=======
-#Sat Dec 29 17:50:37 IST 2018
->>>>>>> 9740e202ddd79374301cc6a64b55b7f93b67e64a
-javac.debug=true
-javadoc.preview=true
+#Mon Dec 31 07:58:28 IST 2018
+>>>>>>>=9740e202ddd79374301cc6a64b55b7f93b67e64a
 do.depend=false
 do.jar=true
+<<<<<<<=HEAD
+javac.debug=true
+javadoc.preview=true
 compile.on.save=false
-<<<<<<< HEAD
 user.properties.file=C\:\\Users\\aarav\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
-=======
-user.properties.file=C\:\\Users\\kumar\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
->>>>>>> 9740e202ddd79374301cc6a64b55b7f93b67e64a
+=\=\=\=\=\=\=
