--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -58,7 +58,7 @@ file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 file.reference.jgoodies-common-1.2.0.jar=lib/jgoodies-common-1.2.0.jar
 file.reference.jgoodies-looks-2.4.1.jar=lib/jgoodies-looks-2.4.1.jar
 file.reference.junit-4.6.jar=lib/junit-4.6.jar
-file.reference.kotlin-runtime.jar=C:\\Users\\aarav\\AppData\\Roaming\\NetBeans\\8.2\\kotlinc\\lib\\kotlin-runtime.jar
+file.reference.kotlin-runtime.jar=nulllib\\kotlin-runtime.jar
 file.reference.kotlin-runtime.jar-1=lib/kotlin-runtime.jar
 file.reference.mysql-connector-java-5.1.4.jar=lib\\mysql-connector-java-5.1.4.jar
 file.reference.mysql-connector-java-5.1.47-bin.jar=lib\\mysql-connector-java-5.1.47-bin.jar
