--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -76,7 +76,8 @@ javac.classpath=\
     ${file.reference.ojdbc7_g.jar}:\
     ${file.reference.mysql-connector-java-5.1.4.jar}:\
     ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.47.jar}
+    ${file.reference.mysql-connector-java-5.1.47.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
