--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,5 +7,5 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 compile.on.save=false
-user.properties.file=C\:\\Users\\aarav\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\kumar\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 =\=\=\=\=\=\=
